# decentrathon-indrive

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.opengl  README.md  README_WEB.md  TRAINING_GUIDE_YOLO.md  app.py  docker-compose.yml  gradio_app.py  health_check.py  integrated_app.py  maskrcnn_train_eval.py  merge_and_label_coco.py  predict.py  predict_examples.py  pyproject.toml  requirements.txt  requirements_web.txt  train_cleanliness.py  train_damage_detection.py  train_damage_yolo_detector.py  train_eval.py  yolo_train.py  yolo_utils.py
scripts/: prepare_dataset.py  scrape_cars_coco.py
