[project]
name = "decentraton-indrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pycocotools>=2.0.10",
    "scikit-learn>=1.7.2",
    "timm>=1.0.19",
    "torch==2.4.1",
    "tqdm>=4.67.1",
]
